--- a/SRC/app/src/main/res/layout/activity_main.xml
+++ b/SRC/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DemoActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnLoad"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Display"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnSort"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="4dp"/>
 
+    <Button
+        android:id="@+id/btnSort"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Sort"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnLoad"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="4dp"/>
+
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnLoad"
+        android:id="@+id/containerFragment"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
